--- a/style-guide-template/scss/partials/_navigation.scss
+++ b/style-guide-template/scss/partials/_navigation.scss
@@ -5,7 +5,7 @@ header {
 	background-color: $background-color;
 	// position: fixed;
 	// height: 50px;
-	width: 100vw;
+	// width: 100vw;
 	text-align: center;
 	top: 0;
 	left: 0;
